# pycriminalip

./: .gitignore  LICENSE  Pipfile  README.md  criminalip.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yaml
criminalip/: client.py  constants.py  util.py
src/criminalip/: client.py
tests/: test_client.py  test_util.py
