[project]
name = "criminalip"
version = "0.0.1"
authors = [
  { name="Jon Heise", email="j.heise@gmail.com" },
]
dependencies = [
  "requests",
  "typing",
]
description = "Simple Python wrapper around the CriminalIP.io API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jheise/pycriminalip"
"Bug Tracker" = "https://github.com/jheise/pycriminalip/issues"
